fixed wrong certificate length, minor changes in debug log macro, cache directory in specific home dir by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D__DEBUG__ -O0")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D__DEBUG__ -O0")
+
 set( PKCS11_HEADERS PKCS11/linux.h PKCS11/pkcs11f.h PKCS11/pkcs11.h PKCS11/pkcs11t.h )
 set( EXAMPLEPKCS11_SOURCES EsempioPKCS11/EsempioPKCS11.cpp )
 
