--- a/CSP/CSP/CMakeLists.txt
+++ b/CSP/CSP/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(ciepki
 		"${CMAKE_CURRENT_LIST_DIR}/abilitaCIE.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/abilitaCIE.h"
 		"${CMAKE_CURRENT_LIST_DIR}/cambioPIN.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/cambioPIN.h"
 		"${CMAKE_CURRENT_LIST_DIR}/CSP.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/ExtAuthKey.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/IAS.cpp"
