--- a/.cproject
+++ b/.cproject
@@ -63,7 +63,11 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="gnu.cpp.compiler.option.include.files.874924943" name="Include files (-include)" superClass="gnu.cpp.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles"/>
                                 								
-                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="gnu.cpp.compiler.option.preprocessor.def.840388691" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols"/>
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.preprocessor.def.840388691" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
+                                    									
+                                    <listOptionValue builtIn="false" value="__STDC_LIB_EXT1__"/>
+                                    								
+                                </option>
                                 								
                                 <option id="gnu.cpp.compiler.option.dialect.std.778974111" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.default" valueType="enumerated"/>
                                 								
@@ -273,6 +277,34 @@
         	
     </storageModule>
     	
+    <storageModule moduleId="cdtBuildSystem" version="4.0.0">
+        		
+        <project id="cie-middleware-linux.null.1270433588" name="cie-middleware-linux"/>
+        	
+    </storageModule>
+    	
+    <storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
+    	
+    <storageModule moduleId="refreshScope" versionNumber="2">
+        		
+        <configuration configurationName="Default">
+            			
+            <resource resourceType="PROJECT" workspacePath="/cie-middleware-linux"/>
+            		
+        </configuration>
+        		
+        <configuration configurationName="Debug">
+            			
+            <resource resourceType="PROJECT" workspacePath="/cie-middleware-linux"/>
+            		
+        </configuration>
+        		
+        <configuration configurationName="Release"/>
+        	
+    </storageModule>
+    	
+    <storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
+    	
     <storageModule moduleId="scannerConfiguration">
         		
         <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
@@ -300,33 +332,19 @@
             <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
             		
         </scannerConfigBuildInfo>
-        	
-    </storageModule>
-    	
-    <storageModule moduleId="cdtBuildSystem" version="4.0.0">
         		
-        <project id="cie-middleware-linux.null.1270433588" name="cie-middleware-linux"/>
-        	
-    </storageModule>
-    	
-    <storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
-    	
-    <storageModule moduleId="refreshScope" versionNumber="2">
-        		
-        <configuration configurationName="Default">
+        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.so.debug.1799254266;cdt.managedbuild.config.gnu.so.debug.1799254266.;cdt.managedbuild.tool.gnu.cpp.compiler.so.debug.1980928210;cdt.managedbuild.tool.gnu.cpp.compiler.input.447036135">
             			
-            <resource resourceType="PROJECT" workspacePath="/cie-middleware-linux"/>
+            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
             		
-        </configuration>
+        </scannerConfigBuildInfo>
         		
-        <configuration configurationName="Debug">
+        <scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.so.debug.1799254266;cdt.managedbuild.config.gnu.so.debug.1799254266.;cdt.managedbuild.tool.gnu.c.compiler.so.debug.346814470;cdt.managedbuild.tool.gnu.c.compiler.input.576441716">
             			
-            <resource resourceType="PROJECT" workspacePath="/cie-middleware-linux"/>
+            <autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
             		
-        </configuration>
+        </scannerConfigBuildInfo>
         	
     </storageModule>
-    	
-    <storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
     
 </cproject>
